--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Verwende keinen Löschen-bestätigen-Dialog</string>
     <string name="enable_pull_to_refresh">Ermögliche \"Auffrischen\" durch Ziehen von der oberen Kante</string>
     <string name="use_24_hour_time_format">Benutze 24-Std.-Zeitformat</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Beginne die Woche am Sonntag</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Immer dasselbe Schlummer-Intervall nutzen</string>
