--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Παράκαμψη πάντα το παράθυρο διαλόγου επιβεβαίωσης διαγραφής</string>
     <string name="enable_pull_to_refresh">Ενεργοποίηση ανανέωσης με \"Σάρωση απο πάνω-κάτω\"</string>
     <string name="use_24_hour_time_format">Χρήση 24ώρου</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Έναρξη εβδομάδας την Κυριακή</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Χρήση πάντα του ίδιου χρόνου αναβολής</string>
