--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Omitir siempre el diálogo de confirmación de eliminación</string>
     <string name="enable_pull_to_refresh">Habilitar tirar desde la parte superior para refrescar</string>
     <string name="use_24_hour_time_format">Usar el formato 24 horas</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Comenzar la semana en Domingo</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Siempre use el mismo tiempo de repetición</string>
