--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Älä koskaan kysy varmistusta tiedostoja poistaessa</string>
     <string name="enable_pull_to_refresh">Päivitä näkymä vedettäessä ylhäältä alas</string>
     <string name="use_24_hour_time_format">Käytä 24:n tunnin kelloa</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Aloita viikko sunnuntaista</string>
     <string name="widgets">Widgetit</string>
     <string name="use_same_snooze">Käytä aina samaa torkkuaikaa</string>
