--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -395,6 +395,7 @@
     <string name="skip_delete_confirmation">Ne jamais afficher le dialogue de confirmation de suppression</string>
     <string name="enable_pull_to_refresh">Activer l\'actualisation par glissement à partir du haut de l\'écran</string>
     <string name="use_24_hour_time_format">Utiliser le format horaire sur 24 heures</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Démarrer la semaine le dimanche</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Toujours utiliser le même intervalle de répétition</string>
