--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Omitir siempre el diálogo de confirmación de eliminación</string>
     <string name="enable_pull_to_refresh">Habilitar tirar desde la parte superior para refrescar</string>
     <string name="use_24_hour_time_format">Use 24-hour time format</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Start week on Sunday</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Always use same snooze time</string>
