--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -413,6 +413,7 @@
     <string name="skip_delete_confirmation">Uvijek preskoči dijaloški okvir za potvrdu brisanja</string>
     <string name="enable_pull_to_refresh">Omogućite osvježavanje povlačenjem s vrha</string>
     <string name="use_24_hour_time_format">Koristite 24-satni format</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Početak tjedna u nedjelju</string>
     <string name="widgets">Widgeti</string>
     <string name="use_same_snooze">Uvijek koristi isto vrijeme odgode</string>
