--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -392,6 +392,7 @@
     <string name="skip_delete_confirmation">Mindig ugorja át a törlés megerősítése kérdést</string>
     <string name="enable_pull_to_refresh">Felülről lefelé húzásos frissítés engedélyezése</string>
     <string name="use_24_hour_time_format">24 órás idő formátum használata</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">A hét kezdete vasárnap</string>
     <string name="widgets">Widgetek</string>
     <string name="use_same_snooze">Mindig ugyanazt a szundi időt használja</string>
