--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Selalu lewati dialog konfirmasi hapus</string>
     <string name="enable_pull_to_refresh">Aktifkan fitur tarik untuk memperbarui</string>
     <string name="use_24_hour_time_format">Gunakan format waktu 24 jam</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Awal pekan dimulai dari hari Minggu</string>
     <string name="widgets">Widget</string>
     <string name="use_same_snooze">Selalu gunakan waktu tunda yang sama</string>
