--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Non chiedere mai la conferma di eliminazione</string>
     <string name="enable_pull_to_refresh">Attiva l\'aggiornamento dall\'alto</string>
     <string name="use_24_hour_time_format">Usa il formato 24 ore</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Inizio settimana di domenica</string>
     <string name="widgets">Widget</string>
     <string name="use_same_snooze">Usa sempre lo stesso tempo di ripetizione</string>
