--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -410,6 +410,7 @@
     <string name="skip_delete_confirmation">Visada praleisti ištrynimo patvirtinimo dialogą</string>
     <string name="enable_pull_to_refresh">Įgalinti patraukimą nuo viršaus, kad </string>
     <string name="use_24_hour_time_format">Naudoti 24 valandų formatą</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Pradėti savaitę nuo sekmadienio</string>
     <string name="widgets">Valdikliai</string>
     <string name="use_same_snooze">Visada naudoti tą patį snaudimo laiką</string>
