--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Hopp alltid over dialog for slettebekreftelse</string>
     <string name="enable_pull_to_refresh">Aktiver vertikal sveipebevegelse fra toppen for innholdsgjenoppfrisking</string>
     <string name="use_24_hour_time_format">Bruk 24-timers tidsformat</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Start uken på søndag</string>
     <string name="widgets">Moduler</string>
     <string name="use_same_snooze">Bruk alltid samme intervall for Snooze</string>
