--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Sempre pular confirmação de exclusão</string>
     <string name="enable_pull_to_refresh">Habilitar puxar do topo da tela para atualizar o conteúdo</string>
     <string name="use_24_hour_time_format">Usar formato de tempo 24-horas</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Iniciar a semana no Domingo</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Sempre usar o mesmo tempo de soneca</string>
