--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Ignorar sempre a confirmação para eliminação de ficheiros</string>
     <string name="enable_pull_to_refresh">Ativar pull-to-refresh</string>
     <string name="use_24_hour_time_format">Utilizar formato 24 horas</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Iniciar semana ao domingo</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Usar sempre o mesmo intervalo para snooze</string>
