--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -414,6 +414,7 @@
     <string name="skip_delete_confirmation">Stále preskočiť potvrdenie vymazania súborov</string>
     <string name="enable_pull_to_refresh">Povoliť obnovenie súborov potiahnutím zhora</string>
     <string name="use_24_hour_time_format">Použiť 24 hodinový časový formát</string>
+    <string name="change_date_and_time_format">Zmeniť dátumový a časový formát</string>
     <string name="sunday_first">Začať týždeň nedeľou</string>
     <string name="widgets">Widgety</string>
     <string name="use_same_snooze">Použiť stále rovnaký čas s Odložiť</string>
