--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -434,6 +434,7 @@
     <string name="skip_delete_confirmation">Vedno preskoči potrditev brisanja</string>
     <string name="enable_pull_to_refresh">Omogočite poteg z vrha za ponovno nalaganje</string>
     <string name="use_24_hour_time_format">Uporabljaj 24-urni format</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Začni teden v nedeljo</string>
     <string name="widgets">Pripomočki</string>
     <string name="use_same_snooze">Vedno uporabi enak čas dremeža</string>
