--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Hoppa alltid över dialogrutan för bekräftelse av borttagning</string>
     <string name="enable_pull_to_refresh">Aktivera uppdatering vid svepning från överkant</string>
     <string name="use_24_hour_time_format">Använd 24-timmarsformat</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Börja veckan på söndag</string>
     <string name="widgets">Widgetar</string>
     <string name="use_same_snooze">Använd alltid samma snooze-intervall</string>
