--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Her zaman silme onayı penceresini atla</string>
     <string name="enable_pull_to_refresh">Üstten yenilemek için çekmeyi etkinleştir</string>
     <string name="use_24_hour_time_format">24 saat biçimini kullan</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Pazar günü hafta başlangıcı</string>
     <string name="widgets">Widget\'lar</string>
     <string name="use_same_snooze">Her zaman aynı erteleme süresini kullan</string>
