--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Завжди пропускати діалог підтвердження видалення</string>
     <string name="enable_pull_to_refresh">Увімкнути оновлення свайпом згори вниз</string>
     <string name="use_24_hour_time_format">Використовувати 24-годинний формат дати</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Починати тиждень з неділі</string>
     <string name="widgets">Віджети</string>
     <string name="use_same_snooze">Завжди використовувати однаковий час відкладання</string>
