--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">Silmə təsdiq dialoqunu göstərmə</string>
     <string name="enable_pull_to_refresh">Yuxarıdan çək-təzələ\'ni aç</string>
     <string name="use_24_hour_time_format">24 saat formatından istifadə et</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Həftəyə Bazar Ertəsindən başla</string>
     <string name="widgets">Widgetlər</string>
     <string name="use_same_snooze">Həmişə eyni yuxu intervalından istifadə et</string>
