--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">삭제 확인 다이얼로그 비활성화</string>
     <string name="enable_pull_to_refresh">상하단 스와이프 동작으로 새로고침</string>
     <string name="use_24_hour_time_format">Use 24-hour time format</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Start week on Sunday</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Always use same snooze time</string>
