--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -412,6 +412,7 @@
     <string name="skip_delete_confirmation">Nie pokazuj okna z potwierdzeniem usunięcia elementów</string>
     <string name="enable_pull_to_refresh">Włącz gest pociągnięcia ekranu od góry w celu odświeżenia widoku</string>
     <string name="use_24_hour_time_format">Używaj 24-godzinnego formatu czasu</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">Rozpoczynaj tydzień od niedzieli</string>
     <string name="widgets">Widżety</string>
     <string name="use_same_snooze">Zawsze używaj tego samego przedziału przypomnienia</string>
