--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -393,6 +393,7 @@
     <string name="skip_delete_confirmation">刪除不再進行確認</string>
     <string name="enable_pull_to_refresh">啟用頂端下拉更新</string>
     <string name="use_24_hour_time_format">使用24小時制</string>
+    <string name="change_date_and_time_format">Change date and time format</string>
     <string name="sunday_first">每周由星期日開始</string>
     <string name="widgets">小工具</string>
     <string name="use_same_snooze">總是使用相同延遲間隔</string>
