--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -393,7 +393,7 @@
     <string name="skip_delete_confirmation">Niet om bevestiging vragen bij verwijderen</string>
     <string name="enable_pull_to_refresh">Pull-to-refresh inschakelen</string>
     <string name="use_24_hour_time_format">24-uursformaat gebruiken</string>
-    <string name="change_date_and_time_format">Change date and time format</string>
+    <string name="change_date_and_time_format">Weergave datum/tijd aanpassen</string>
     <string name="sunday_first">Week op zondag beginnen</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Altijd dezelfde interval voor uitstellen gebruiken</string>
