--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -385,7 +385,7 @@
     <string name="large">Μεγάλο</string>
     <string name="extra_large">Πολύ Μεγάλο</string>
     <string name="password_protect_hidden_items">Κωδικός προστασίας προβολής κρυφών στοιχείων</string>
-    <string name="password_protect_whole_app">Κωδικός προστασίας  ολόκληρης της εφαρμογής</string>
+    <string name="password_protect_whole_app">Κωδικός προστασίας ολόκληρης της εφαρμογής</string>
     <string name="password_protect_file_deletion">Προστασία με κωδικό για διαγραφή ή μετακίνηση</string>
     <string name="keep_last_modified">Διατήρηση της παλιάς τροποποιημένης τιμής στις λειτουργίες αρχείων</string>
     <string name="show_info_bubble">Εμφάνιση φυσαλίδας πληροφοριών κατά την κύλιση στοιχείων στη γραμμή κύλισης</string>
@@ -393,7 +393,7 @@
     <string name="skip_delete_confirmation">Παράκαμψη πάντα το παράθυρο διαλόγου επιβεβαίωσης διαγραφής</string>
     <string name="enable_pull_to_refresh">Ενεργοποίηση ανανέωσης με \"Σάρωση απο πάνω-κάτω\"</string>
     <string name="use_24_hour_time_format">Χρήση 24ώρου</string>
-    <string name="change_date_and_time_format">Change date and time format</string>
+    <string name="change_date_and_time_format">Αλλαγή μορφής ημερομηνίας και ώρας</string>
     <string name="sunday_first">Έναρξη εβδομάδας την Κυριακή</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Χρήση πάντα του ίδιου χρόνου αναβολής</string>
